--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 --primary-color: #FFFFFF;
 --header-logo-color: #000000;
 --hero-footer-bgcolor: #2F303A;
---gallery-filter-bgcolor: #F5F4FA;
+--team-gallery-filter-bgcolor: #F5F4FA;
 --primary-text-color: #212121;
 --secondary-text-color: #757575;
 --accent-color: #2196F3;
@@ -54,12 +54,17 @@ body {
     padding-right: 15px;
     margin: 0 auto;
 }
+
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 /*----------------------------------------------HEADER----------------------------------------  */
 .navigation {
     display: flex;
 }
 
-.logo {
+.header .logo {
     padding-top: 25px;
     padding-bottom: 25px;
     margin-right: 93px;
@@ -121,16 +126,13 @@ body {
 
 .footer {
     background-color: var(--hero-footer-bgcolor);
-}
-
-.container-footer {
-    display: flex;
-    flex-direction: column;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer .logo {
-    margin-top: 60px;
-    margin-bottom: 20px;
+    display: block;
+    margin-bottom: 30px;
 }
 
 .footer-logo {
@@ -141,9 +143,6 @@ body {
     margin-bottom: 10px;
 }
 
-.footer-item:last-child {
-    margin-bottom: 60px;
-}
 .footer-link {
     font-size: 14px;
     line-height: 1.71;
@@ -166,14 +165,13 @@ body {
 
 .hero {
     background-color: var(--hero-footer-bgcolor);
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
-.hero-container {
-    display: flex;
-    flex-direction: column;
-}
 .hero-title {
-    display: inline-block;
+    display: block;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -182,12 +180,12 @@ body {
     text-transform: uppercase;
     color: var(--primary-color);
     margin: 0 auto;
-    margin-top: 200px;
     margin-bottom: 30px;
     max-width: 696px;
 }
 
 .hero-button {
+    display: block;
     min-width: 200px;
     height: 50px;
     flex-shrink: 0;
@@ -202,12 +200,10 @@ body {
     text-align: center;
     color: var(--primary-color);
     cursor: pointer;
-    margin: 0 auto;
-    margin-bottom: 200px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     padding-right: 10px 32px;
-
+    margin: 0 auto;
 }
 
 /*----------------------------------------------ADVANTAGES------------------------------------  */
@@ -238,20 +234,20 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--primary-text-color);
-    margin-top: 94px;
     margin-bottom: 10px;
 }
-
 
 .advantages-item-text {
     font-size: 14px;
     line-height: 1.71;    
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
-    margin-bottom: 94px;
 }
 
 /*----------------------------------------------DOING-----------------------------------------  */
+.doing {
+    padding-top: 0;
+}
 
 .doing-title {
     color: var(--primary-text-color);
@@ -268,18 +264,21 @@ body {
 
 
 .doing-item {
-    margin-bottom: 94px;
     width: calc(100% / 3 - 30px);
     margin-left: 30px;
 }
 
-.doing-image {
+img {
     display: block;
     width: 100%;
     height: auto;
 }
 
 /*----------------------------------------------TEAM------------------------------------------  */
+.team {
+    background-color: var(--team-gallery-filter-bgcolor);
+}
+
 .team-title {
     color: var(--primary-text-color);
     font-size: 36px;
@@ -297,11 +296,11 @@ body {
 .team-item {
     width: calc(100% / 4 - 30px);
     margin-left: 30px;
-    margin-bottom: 94px;
 }
 
-.team-image {
-    margin-bottom: 30px;
+.team-title-text-wrap {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .team-item-title {
@@ -343,8 +342,8 @@ body {
     line-height: 1.63;
     text-align: center;
     letter-spacing: 0.03em;
-    background-color: var(--gallery-filter-bgcolor);
-    border: var(--gallery-filter-bgcolor);
+    background-color: var(--team-gallery-filter-bgcolor);
+    border: var(--team-gallery-filter-bgcolor);
     color: var(--primary-text-color);
     border-radius: 4px;
     cursor: pointer;
@@ -371,14 +370,12 @@ body {
 .gallery-item {
     width: calc(100% / 3 - 30px);
     margin-left: 30px;
-}
-
-.gallery-image {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    border: 1px solid #EEEEEE;
 }
 
 .gallery-title-text {
-    margin-left: 24px;
+    padding: 20px 24px;
 }
 
 .gallery-item-title {
@@ -394,5 +391,4 @@ body {
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
-    margin-bottom: 20px;
 }
