--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ body {
 }
 /*----------------------------------------------HEADER----------------------------------------  */
 .header {
-    border: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 }
 
 .navigation {
