--- a/css/styles.css
+++ b/css/styles.css
@@ -374,8 +374,11 @@ img {
 .gallery-item {
     width: calc(100% / 3 - 30px);
     margin-left: 30px;
-    margin-bottom: 30px;
     border: 1px solid #EEEEEE;
+}
+
+.gallery-item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
 }
 
 .gallery-title-text {
